--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS=$(curl --insecure  https://kvdb.io/82Dr8iqSkhLSo9U5YYxyEr/migration_<< parameters.Workflow_ID >>)
+            SUCCESS=$(curl --insecure  https://kvdb.io/BwsYZAWMMjM9pPH9C8QNnt/migration_<< parameters.Workflow_ID >>)
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -294,7 +294,7 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/82Dr8iqSkhLSo9U5YYxyEr/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl https://kvdb.io/BwsYZAWMMjM9pPH9C8QNnt/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
               echo "No migrations are pending" 
             fi
@@ -450,7 +450,7 @@ jobs:
                       list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                       --no-paginate --output text)
             echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
-            curl https://kvdb.io/82Dr8iqSkhLSo9U5YYxyEr/old_workflow_id -d "${OLD_WORKFLOW_ID}"  
+            curl https://kvdb.io/BwsYZAWMMjM9pPH9C8QNnt/old_workflow_id -d "${OLD_WORKFLOW_ID}"  
 
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
@@ -458,7 +458,7 @@ jobs:
               --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags project=udapeople
 
-              echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
+              echo "Old Wokflow ID: ${OLD_WORKFLOW_ID:10:}"
               echo Current Workflow ID: "${CIRCLE_WORKFLOW_ID:0:7}"
 
       # Here's where you will add some code to rollback on failure
@@ -476,17 +476,17 @@ jobs:
             name: Remove old stacks and files
             command: |
               
-              OldWorkflowID=$(curl --insecure  https://kvdb.io/82Dr8iqSkhLSo9U5YYxyEr/oldworkflowid)
-              echo OldWorkflowID: "${OldWorkflowID}"
+              OLD_WORKFLOW_ID=$(curl --insecure  https://kvdb.io/BwsYZAWMMjM9pPH9C8QNnt/old_workflow_id)
+              echo OLD_WORKFLOW_ID: "${OLD_WORKFLOW_ID}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
+              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OLD_WORKFLOW_ID}" ]]
               then
                 # your code here
-                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                # aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                aws s3 rm "s3://${OLD_WORKFLOW_ID}" --recursive
+                # aws cloudformation delete-stack --stack-name "udapeople-backend-${OLD_WORKFLOW_ID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OLD_WORKFLOW_ID}"
               fi
         - run:
             name: save current stack workflow id
@@ -496,7 +496,7 @@ jobs:
               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
               --no-paginate --output text)
               echo currentWorkflowID: "${CurrentWorkflowID}"
-              curl https://kvdb.io/82Dr8iqSkhLSo9U5YYxyEr/oldworkflowid  -d ${CurrentWorkflowID} --insecure
+              curl https://kvdb.io/BwsYZAWMMjM9pPH9C8QNnt/oldworkflowid  -d ${CurrentWorkflowID} --insecure
 
         # - run:
         #     name: Get old stack workflow id and remove stacks
@@ -550,7 +550,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
