--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -476,17 +476,17 @@ jobs:
             name: Remove old stacks and files
             command: |
               
-              OLD_WORKFLOW_ID=$(curl --insecure  https://kvdb.io/BwsYZAWMMjM9pPH9C8QNnt/old_workflow_id)
-              echo OLD_WORKFLOW_ID: "${OLD_WORKFLOW_ID}"
+              OLD_WORKFLOW_ID=$(curl --insecure  https://kvdb.io/CHmuquEB77wgpq4z383x7a/old_workflow_id)
+              echo OLD_WORKFLOW_ID: "${OLD_WORKFLOW_ID:10:16}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OLD_WORKFLOW_ID}" ]]
+              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OLD_WORKFLOW_ID:10:16}" ]]
               then
                 # your code here
-                aws s3 rm "s3://${OLD_WORKFLOW_ID}" --recursive
-                # aws cloudformation delete-stack --stack-name "udapeople-backend-${OLD_WORKFLOW_ID}"
-                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OLD_WORKFLOW_ID}"
+                aws s3 rm "s3://udapeople-${OLD_WORKFLOW_ID:10:16}" --recursive
+                # aws cloudformation delete-stack --stack-name "udapeople-backend-${OLD_WORKFLOW_ID:10:16}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OLD_WORKFLOW_ID:10:16}"
               fi
         - run:
             name: save current stack workflow id
@@ -496,7 +496,7 @@ jobs:
               list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
               --no-paginate --output text)
               echo currentWorkflowID: "${CurrentWorkflowID}"
-              curl https://kvdb.io/BwsYZAWMMjM9pPH9C8QNnt/oldworkflowid  -d ${CurrentWorkflowID} --insecure
+              curl https://kvdb.io/CHmuquEB77wgpq4z383x7a/oldworkflowid  -d ${CurrentWorkflowID} --insecure
 
         # - run:
         #     name: Get old stack workflow id and remove stacks
@@ -552,5 +552,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
