--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -481,22 +481,27 @@ jobs:
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OLD_WORKFLOW_ID:10:16}" ]]
+              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OLD_WORKFLOW_ID:10:16}" ]]
               then
-                # your code here
+                echo "----------------Deleted Confirmed-------------------"
                 aws s3 rm "s3://udapeople-${OLD_WORKFLOW_ID:10:16}" --recursive
-                # aws cloudformation delete-stack --stack-name "udapeople-backend-${OLD_WORKFLOW_ID:10:16}"
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OLD_WORKFLOW_ID:10:16}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OLD_WORKFLOW_ID:10:16}"
-              fi
-        - run:
-            name: save current stack workflow id
-            command: |
-              # Fetch the Current workflow ID
-              export CurrentWorkflowID=$(aws cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
-              echo currentWorkflowID: "${CurrentWorkflowID}"
-              curl https://kvdb.io/CHmuquEB77wgpq4z383x7a/oldworkflowid  -d ${CurrentWorkflowID} --insecure
+              else
+                echo "------------------Cannot Cleanup----------------------"
+              fi   
+      
+
+      
+        # - run:
+        #     name: save current stack workflow id
+        #     command: |
+        #       # Fetch the Current workflow ID
+        #       export CurrentWorkflowID=$(aws cloudformation \
+        #       list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+        #       --no-paginate --output text)
+        #       echo currentWorkflowID: "${CurrentWorkflowID}"
+        #       curl https://kvdb.io/CHmuquEB77wgpq4z383x7a/oldworkflowid  -d ${CurrentWorkflowID} --insecure
 
         # - run:
         #     name: Get old stack workflow id and remove stacks
